# owa-tui

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  conftest.py  package-lock.json  package.json  pyproject.toml  tui-test.config.ts
.github/workflows/: ci.yml  release.yml
.plans/: 01-architecture.md  10-v1-cal.md  11-v1-mail.md  12-v1-graph.md  20-v2-coverage.md  90-release.md  DONE.md  TODO.md  ponytail-audit-cleanup.md
.plans/done/: grid-teams-action-gaps.md  ponytail-audit-cleanup.md
e2e/: actions.test.ts  ado.test.ts  doctor.test.ts  drive.test.ts  live.test.ts  mail.test.ts  people.test.ts  planner.test.ts  sched.test.ts  sites.test.ts  smoke.test.ts  teams.test.ts  todo.test.ts
e2e/fixtures/: ado.json  cal.json  doctor.json  drive.json  drive_Q2_Reports.json  mail.json  mail_body.json  mail_folders.json  people.json  planner.json  sched.json  sites.json  sites_Project_Tracker.json  teams.json  teams_19_general_engineering_thread_v2.json  teams_messages.json  todo.json
e2e/fixtures/graph/: default.json  me.json
src/owa_tui/: __init__.py  adapter.py  app_config.py  fixtures.py  settings_cycle.py
src/owa_tui/graph/: __init__.py  actions.py  auth.py  fetch.py  nav.py  settings.py  state.py
src/owa_tui/mail/: __init__.py  dates.py  list_row.py  settings.py  sort.py
src/owa_tui/people/: __init__.py  settings.py
src/owa_tui/screens/: __init__.py  ado.py  doctor.py  drive.py  graph.py  home.py  mail.py  (+6 more)
src/tests/: test_app_config.py  test_home_pilot.py  test_launcher.py  test_nav.py  test_screen_construction.py  test_settings_cycle.py
(+66 files in other folders)
